[gd_scene load_steps=2 format=3 uid="uid://bcx7jqmwg2q2b"]

[ext_resource type="Script" uid="uid://26iedx08fjjw" path="res://scripts/spin.gd" id="1_bgo38"]

[node name="Slot" type="Node2D"]
script = ExtResource("1_bgo38")

[node name="Reels" type="Node2D" parent="."]
position = Vector2(29, 12)

[node name="Reel1" type="Sprite2D" parent="Reels"]
position = Vector2(189, 202.5)
region_rect = Rect2(112, 96, 272, 344)

[node name="Reel2" type="Sprite2D" parent="Reels"]
position = Vector2(558, 210.5)
region_rect = Rect2(896, 216, 304, 304)

[node name="Reel3" type="Sprite2D" parent="Reels"]
position = Vector2(950, 210.5)
region_rect = Rect2(512, 80, 304, 312)

[node name="ResultLabel" type="Label" parent="."]
offset_left = 539.0
offset_top = 470.0
offset_right = 604.0
offset_bottom = 493.0
text = "WINNER"
metadata/_edit_use_anchors_ = true

[node name="SpinButton" type="Button" parent="."]
offset_left = 545.0
offset_top = 432.0
offset_right = 594.0
offset_bottom = 463.0
text = "SPIN!"
metadata/_edit_use_anchors_ = true
